--- a/scripts/sys-openmpi-mca-params.conf
+++ b/scripts/sys-openmpi-mca-params.conf
@@ -10,8 +10,6 @@
 # Copyright (c) 2004-2005 The Regents of the University of California.
 #                         All rights reserved.
 # Copyright (c) 2006      Cisco Systems, Inc.  All rights reserved.
-# Copyright (c) 2011-2013 Los Alamos National Security, LLC. All rights
-#                         reserved.
 # $COPYRIGHT$
 #
 # Additional copyrights may follow
@@ -58,67 +56,24 @@
 
 # See "ompi_info --param all all" for a full listing of Open MPI MCA
 # parameters available and their default values.
-#
-
+coll_fca_enable = 0
+scoll_fca_enable = 0
+#rmaps_base_mapping_policy = dist:auto
+coll = ^ml
+hwloc_base_binding_policy = core
+btl = vader,openib,self
 # Basic behavior to smooth startup
-mca_base_component_show_load_errors = 1
-opal_set_max_sys_limits = 0
-orte_report_launch_progress = 0
-
+mca_base_component_show_load_errors = 0
+orte_abort_timeout = 10
+opal_set_max_sys_limits = 1
+#
 # Define timeout for daemons to report back during launch
-orte_startup_timeout = 0 
+orte_startup_timeout = 1000
 
-## Protect the shared file systems
-orte_no_session_dirs = /panfs,/scratch,/users,/usr/projects
-orte_tmpdir_base = /tmp
-
-## Require an allocation to run - protects the frontend
-## from inadvertent job executions
-orte_allocation_required = 0
-
-## MPI behavior
-## Do NOT specify mpi_leave_pinned so system
-## can figure out for itself whether or not
-## it is supported and usable
-orte_notifier = syslog
-
-#orte_abort_timeout = 10
-#opal_set_max_sys_limits = 1
-#orte_startup_timeout = 1000
-
-## Add the interface for out-of-band communication
-## and set it up
-oob_tcp_if_include = ib0,eth0
-oob_tcp_peer_retries = 2 
+oob_tcp_peer_retries = 1000
 oob_tcp_disable_family = IPv6
 oob_tcp_listen_mode = listen_thread
-oob_tcp_sndbuf = 0 
-oob_tcp_rcvbuf = 0 
-
-#coll = ^ml
-#hwloc_base_binding_policy = core
-## Define the MPI interconnects
-btl = sm,openib,self
-
-## Setup OpenIB - just in case
-btl_openib_want_fork_support = 0
-#btl_openib_receive_queues = S,4096,1024:S,12288,512:S,65536,512
-btl_openib_receive_queues = P,128,256,192,128:S,2048,1024,1008,64:S,12288,1024,1008,64:S,65536,1024,1008,64
-
-## Enable cpu affinity
-hwloc_base_binding_policy = none
-
-## Setup MPI options
-mpi_show_handle_leaks = 0
-mpi_warn_on_fork = 1
-opal_abort_print_stack = 0
+oob_tcp_sndbuf = 32768
+oob_tcp_rcvbuf = 32768
 
 opal_event_include=epoll
-#opal_warn_on_missing_libcuda = 0
-#bml_r2_show_unreach_errors = 0
-
-# alltoall algorithm selection settings for tuned coll mca
-coll_tuned_alltoall_large_msg              = 3000
-coll_tuned_alltoall_min_procs              = 0
-coll_tuned_alltoall_algorithm_max_requests = 0
-
